Fix: Include the previously missing image

--- a/hugo.yaml
+++ b/hugo.yaml
@@ -50,17 +50,17 @@ params:
 
   assets:
     disableHLJS: true
-    favicon: "../assets/favicon/favicon-32x32.ico"
-    favicon16x16: "../assets/favicon/favicon-16x16.png"
-    favicon32x32: "../assets/favicon/favicon-32x32.png"
-    apple_touch_icon: "../assets/favicon/apple-touch-icon.png"
-    safari_pinned_tab: "../assets/favicon/logo.svg"
+    favicon: "https://raw.githubusercontent.com/Lezgend/homepage/main/assets/favicon/logo.svg"
+    favicon16x16: "https://raw.githubusercontent.com/Lezgend/homepage/main/assets/favicon/logo.svg"
+    favicon32x32: "https://raw.githubusercontent.com/Lezgend/homepage/main/assets/favicon/logo.svg"
+    apple_touch_icon: "https://raw.githubusercontent.com/Lezgend/homepage/main/assets/favicon/logo.svg"
+    safari_pinned_tab: "https://raw.githubusercontent.com/Lezgend/homepage/main/assets/favicon/logo.svg"
 
   profileMode:
     enabled: true
     title: Warayut Poomiwatracanont
     subtitle: "💻 System Engineer"
-    imageUrl: "../assets/icons/cat-the-box.svg"
+    imageUrl: "https://raw.githubusercontent.com/Lezgend/homepage/main/assets/icons/cat-the-box.svg"
     imageTitle: Profile
     imageWidth: 240
     imageHeight: 240
